test/asm/invalid-bank.err
error: invalid-bank.asm(1):
    VRAM bank value $0002 out of range ($0000 to $0001)
Assembly aborted with 1 error!
